--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html ng-app="rammler">
   <head>
     <meta charset="iso-8859-1">
-    <title>Rhyhtmus Rammler Schlierbach</title>
-    <meta name="description" content="Rhyhmus Rammler, Rammler, Schlierbach, Guggenmusik, Fasnacht">
+    <title>Rhythmus Rammler Schlierbach</title>
+    <meta name="description" content="Rhythmus Rammler, Rammler, Schlierbach, Guggenmusik, Fasnacht">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <img alt="Einfach aber göttlich" src="assets/images/banner.png" width="100%"/>
+          <img alt="District 6231" src="assets/images/banner.png" width="100%"/>
         </div>
       </div>
       <div class="row">
