--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <img alt="District 6231" src="assets/images/banner.png" width="100%"/>
+          <img alt="Candy Shop" src="assets/images/banner.jpg" width="100%"/>
         </div>
       </div>
       <div class="row">
