--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,12 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 col-sd-12 col-xs-12" navbar></div>
+        <navbar class="col-md-12 col-sd-12 col-xs-12"></navbar>
       </div>
       <div class="row">
-        <div class="col-md-9 col-sm-8 col-xs-12" ng-view></div>
+        <ng-view class="col-md-9 col-sm-8 col-xs-12"></ng-view>
         <div class="col-xs-3 visible-xs"></div>
-        <div class="col-md-3 col-sm-4 col-xs-6 text-center" sponsoren></div>
+        <sponsoren class="col-md-3 col-sm-4 col-xs-6 text-center"></sponsoren>
         <div class="col-xs-3 visible-xs"></div>
       </div>
     </div>
